--- a/MonoLoaderDLL/MonoLoaderDLL/MonoLoaderDLL.vcxproj.filters
+++ b/MonoLoaderDLL/MonoLoaderDLL/MonoLoaderDLL.vcxproj.filters
@@ -21,6 +21,12 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MonoLoaderDLL.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MonoTypes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
